Añado imagen a web

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="contenido">
         
+        <img src="imagen.jpg">
         <p>
             Web sobre el módulo de Entornos de Desarrollo de 1º de DAM
         </p>
